fix modal header issue where x is not showing all the way at the end

--- a/src/styles/sass/_global.scss
+++ b/src/styles/sass/_global.scss
@@ -1015,6 +1015,7 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        width: 100%;
         .#{$identifier}-modal-title {
           font-size: 24px;
           color: $white;
